# data-engineering

./: .gitignore  README.md  agents.md
airflow/: Dockerfile  docker-compose.yml
airflow/Broker/: Dockerfile  airflow.cfg  celeryconfig.py
airflow/dags/: example_bash_operator.py
apache-atlas/: Dockerfile  atlas-application.properties  atlas_config.py  docker-compose.yaml
bi/cube-js/: cube.js  postgres.yaml  redis.yaml  service.yaml
common-infrastructure/kafka/: docker-compose.yaml
dask/: Dockerfile  docker-compose.yaml  nginx.conf  requirements.txt
debezium/: README.md  docker-compose.yaml
docker-desktop-mac-alternatives/: README.md  Vagrantfile  docker-compose.yaml
elasticsearch/: docker-compose.yaml  requirements.txt
hadoop/hbase/: Dockerfile  docker-compose.yaml  hbase-site.xml  regionservers
hadoop/hdfs/: docker-compose.yaml
iceburg/: docker-compose.yaml
iceburg/polaris/: docker-compose.yaml
jupyter/: README.md  docker-compose.yaml
jupyter/Commuter/: Dockerfile
jupyter/jupyter/: Dockerfile  config.yaml  kernel.json  (+1 more)
jupyter/jupyter-test/: Dockerfile  Tensorboard Example.ipynb  docker-compose.yaml
marimo_notebooks/: .gitignore  README.md  polars_examples.py  pyproject.toml
minio/: docker-compose.yaml
mlflow/: Dockerfile  Example.py  MLproject  NestedRunExample.py  README.md  RunExample.py  docker-compose.yaml  train-requirements.txt  train.py
prometheus/: docker-compose.yaml
rustfs/: docker-compose.yaml
solr/: Dockerfile  docker-compose.yaml
spark/: Dockerfile  docker-compose.yml  spark-defaults.conf
superset/: values.yaml
(+45 files in other folders)
