[project]
name = "marimo-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Sicotte", email = "sicotte.jason@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.18.4",
    "pandas>=2.3.3",
    "polars>=1.36.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
